캐시 버그로 인한 오늘의 문제 안나오는 버그 수정